--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,56 @@
-body { font-family: Fira Sans;
-}
+* {box-sizing: border-box;}
 
-footer {}
+body { 
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 .header {
-    background-color:#2b8af0;
-    padding:15px;
-    text-align:left;
-    font-size:25px;
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
 }
 
-.logo {
-    color: white;
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
 }
 
-.menu-login, .menu-login a {
-    color: white;
-    text-align:right;
-    float:right;
-    background-color:red;
-    padding:10px;
-    font-size:18px;
-    text-decoration:none;
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+  background-color: dodgerblue;
+  color: white;
 }
 
-.grey-text {
-    color: grey;
+.header a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-.container-footer {
-    display: flex;
+.header a.active {
+  background-color: grey;
+  color: white;
+}
 
-    justify-content: space-around;
+.header-right {
+  float: right;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-right {
+    float: none;
+  }
 }
