email subscription form, footer-itens margin-left

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,8 @@ body {
 .container-footer {
     display: flex;
     gap: 1rem 2rem;
+    float:block;
+    margin-left:20px;
 }
 
 .footer-items {
@@ -73,4 +75,36 @@ body {
   .header-right {
     float: none;
   }
+
+}
+
+input[type=text]{
+  width: 300px;
+  padding: 12px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+input[type=submit] {
+  width: 96px;
+  padding: 12px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+input[type=checkbox] {
+  margin-top: 16px;
+}
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  border: none;
+}
+
+input[type=submit]:hover {
+  opacity: 0.8;
 }
