melhora visual da secao inicial

--- a/styles.css
+++ b/styles.css
@@ -101,8 +101,18 @@ body {
 
 }
 
+#texto-atrativo {
+    color: white;
+    font-size: 4rem;
+}
+
 #landing-main {
     padding-left: 20px;
+    background-image:
+        linear-gradient(to bottom, rgba(0, 0, 255, 0.3), rgba(0, 0, 255, 0.4)),
+        url('https://www.albany.edu/sites/default/files/keynote-speaker.jpg');
+    background-size: cover;
+    width: 100%;
 }
 
 input[type=text]{
@@ -112,6 +122,7 @@ input[type=text]{
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
+  border-radius: 5px;
 }
 input[type=submit] {
   width: 96px;
@@ -120,6 +131,7 @@ input[type=submit] {
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
+  border-radius: 5px;
 }
 
 input[type=checkbox] {
