--- a/styles.css
+++ b/styles.css
@@ -64,13 +64,12 @@ body {
 }
 
 .funcionalidades {
-  width: auto;
-  height: auto;
+  background-image: linear-gradient(to right, rgb(45, 138, 45),rgb(56, 170, 31));
   background-color: rgb(45, 138, 45);
   color : white;
   padding: 100px;
-  padding-right: 950px;
-  text-align: center;
+  padding-left: 150px;
+  
   
 }
 
