--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ body {
   overflow: hidden;
   background-color: #f1f1f1;
   padding: 20px 10px;
+  width: 100%;
+  position: fixed;
 }
 
 .header a {
