--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ body {
   font-family: Raleway, Arial, Helvetica, sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 .header {
   overflow: hidden;
   background-color: #f1f1f1;
@@ -82,8 +86,8 @@ body {
   color : white;
   padding: 100px;
   padding-left: 150px;
-  
-  
+
+
 }
 
 .sobre h1 {
