--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ body {
   font-family: Raleway, Arial, Helvetica, sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 a {
     text-decoration: none;
 }
