--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ a {
   float: right;
 }
 
-.sobre {
+#sobre {
   background-image: linear-gradient(to right, rgb(45, 138, 45),rgb(56, 170, 31));
   background-color: rgb(45, 138, 45);
   color : white;
@@ -94,16 +94,20 @@ a {
 
 }
 
-.sobre h1 {
+#sobre h1 {
   font-size: 50px;
 }
 
-.sobre h2 {
+#sobre h2 {
   font-size: 36px;
 }
 
-.sobre p {
+#sobre p {
   font-size: 30px;
+}
+
+#sobre img {
+  border-radius: 50%;
 }
 
 @media screen and (max-width: 500px) {
