--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,11 @@ a {
   border-radius: 50%;
 }
 
+#publico-alvo {
+    background-color: green;
+    text-align: center;
+}
+
 @media screen and (max-width: 500px) {
   .header a {
     float: none;
