--- a/styles.css
+++ b/styles.css
@@ -84,14 +84,42 @@ a {
   float: right;
 }
 
+.grid-imagens-publico {
+    display: flex;
+    justify-content: center;
+    gap: 5%;
+    text-align: left;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+.imagem-publico {
+    width: 30%;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+}
+
+.imagem-publico img {
+    background-color: white;
+    background-size: 100%;
+    width: 100%;
+    height: 90%;
+    object-fit: fill;
+}
+
+.imagem-publico p {
+    padding-left: 1rem;
+}
+
 #sobre {
   background-image: linear-gradient(to right, rgb(45, 138, 45),rgb(56, 170, 31));
   background-color: rgb(45, 138, 45);
   color : white;
   padding: 100px;
   padding-left: 150px;
-
-
 }
 
 #sobre h1 {
@@ -111,7 +139,8 @@ a {
 }
 
 #publico-alvo {
-    background-color: green;
+    padding: 2rem;
+    background-color: #69AB6C;
     text-align: center;
 }
 
