--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ a.active {
 }
 
 #publico-alvo {
-    padding: 10% 10% 10% 10%;
+    padding: 10%;
     background-color: #69AB6C;
     text-align: center;
     font-size: 2vw;
@@ -242,8 +242,8 @@ input[type=submit]:hover {
   background-color: rgb(110, 206, 235);
   width:100%;
   height:100%;
-  padding:100px;
+  padding: 10%;
   text-align:center;
   display:table;
-
+  font-size: 2vw;
 }
