--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ a {
     display: flex;
     gap: 10%;
     float:block;
-    padding: 2%;
+    padding: 2% 4% 2% 4%;
 }
 
 .footer-items {
@@ -58,7 +58,7 @@ a {
 footer {
     display: flex;
     flex-direction: column;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
 }
 
 .copyright {
