--- a/styles.css
+++ b/styles.css
@@ -153,45 +153,14 @@ a.active {
     font-size: 2vw;
 }
 
-@media screen and (max-width: 900px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-  .header-right {
-    float: none;
-  }
-
-  .grid-imagens-publico {
-      flex-direction: column;
-      align-items: center;
-  }
-
-  .imagem-publico {
-      margin-bottom: 5%;
-      width: auto;
-  }
-
-  .imagem-publico p {
-      font-size: 3vw;
-      text-align: center;
-      padding: 0px;
-  }
-}
-@media screen and (min-width: 900px) {
-    .imagem-publico {
-        height: auto;
-    }
-}
-
 #texto-atrativo {
     color: white;
     font-size: 3vw;
 }
 
 #landing-main {
+    display: flex;
+    flex-direction: column;
     padding: 20%;
     background-image:
         linear-gradient(to bottom, rgba(0, 0, 255, 0.3), rgba(0, 0, 255, 0.4)),
@@ -201,8 +170,8 @@ a.active {
 }
 
 input[type=text]{
-    width: 30vw;
-    font-size: 1vw;
+    width: 40vw;
+    font-size: 1.5vw;
     padding: 12px;
     margin: 8px 0;
     display: inline-block;
@@ -211,9 +180,9 @@ input[type=text]{
     border-radius: 5px;
 }
 input[type=submit] {
-      width: 8vw;
+      width: 12vw;
       padding: 12px;
-      font-size: 1vw;
+      font-size: 1.5vw;
       margin: 8px 0;
       display: inline-block;
       border: 1px solid #ccc;
@@ -244,4 +213,58 @@ input[type=submit]:hover {
   text-align:center;
   display:table;
   font-size: 2vw;
+}
+
+@media screen and (max-width: 900px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .header-right {
+    float: none;
+  }
+
+  .grid-imagens-publico {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .imagem-publico {
+      margin-bottom: 5%;
+      width: auto;
+  }
+
+  .imagem-publico p {
+      font-size: 3vw;
+      text-align: center;
+      padding: 0px;
+  }
+
+  #landing-main {
+      padding-top: 40vw;
+      padding-bottom: 40vw;
+  }
+
+  form {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+
+  input[type=text] {
+      width: 60vw;
+      font-size: 2vw;
+  }
+  input[type=submit] {
+      width: 30vw;
+      font-size: 2vw;
+  }
+}
+@media screen and (min-width: 900px) {
+    .imagem-publico {
+        height: auto;
+    }
 }
