--- a/styles.css
+++ b/styles.css
@@ -139,9 +139,17 @@ a.active {
   font-size: 30px;
 }
 
+.avatar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+
+}
+
 .avatar img {
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: 95%;
   border-radius: 50%;
 
 }
