--- a/styles.css
+++ b/styles.css
@@ -136,22 +136,20 @@ a.active {
 }
 
 #sobre p {
-  font-size: 30px;
+  font-size: 1.5vw;
 }
 
-.avatar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
 
+#equipe {
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
 .avatar img {
   width: 100%;
-  height: 95%;
+  height: auto;
   border-radius: 50%;
-
 }
 
 #publico-alvo {
@@ -294,4 +292,11 @@ input[type=submit]:hover {
     .imagem-publico {
         height: auto;
     }
+}
+.avatar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
