melhora destaque de submit trocando para cor laranja

--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ input[type=checkbox] {
 }
 
 input[type=submit] {
-  background-color: #04AA6D;
+  background-color: #FFA205;
   color: white;
   border: none;
 }
