--- a/styles.css
+++ b/styles.css
@@ -191,7 +191,7 @@ input[type=submit] {
       font-size: 1.5vw;
       margin: 8px 0;
       display: inline-block;
-      border: 1px solid #ccc;
+      border: 1px solid #FFA205;
       box-sizing: border-box;
       border-radius: 5px;
 }
@@ -203,11 +203,18 @@ input[type=checkbox] {
 input[type=submit] {
   background-color: #FFA205;
   color: white;
-  border: none;
 }
 
 input[type=submit]:hover {
-  opacity: 0.8;
+    animation-name: fadeout;
+    animation-duration: 500ms;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeout {
+    100% {
+        background-color: transparent;
+    }
 }
 
 /* funcionalidades */
