--- a/styles.css
+++ b/styles.css
@@ -191,7 +191,7 @@ input[type=submit] {
       font-size: 1.5vw;
       margin: 8px 0;
       display: inline-block;
-      border: 1px solid #FFA205;
+      border: 1px solid #FF8D1E;
       box-sizing: border-box;
       border-radius: 5px;
 }
@@ -201,7 +201,7 @@ input[type=checkbox] {
 }
 
 input[type=submit] {
-  background-color: #FFA205;
+  background-color: #FF8D1E;
   color: white;
 }
 
