--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ a.active {
     display: flex;
     flex-direction: column;
     height: auto;
+    position: relative;
 }
 
 .imagem-publico img {
@@ -172,6 +173,7 @@ a.active {
         linear-gradient(to bottom, rgba(0, 0, 255, 0.3), rgba(0, 0, 255, 0.4)),
         url('https://www.albany.edu/sites/default/files/keynote-speaker.jpg');
     background-size: cover;
+    background-attachment: fixed;
     width: 100%;
 }
 
@@ -185,7 +187,8 @@ input[type=text]{
     box-sizing: border-box;
     border-radius: 5px;
 }
-input[type=submit] {
+
+.botao {
       width: 12vw;
       padding: 12px;
       font-size: 1.5vw;
@@ -194,18 +197,19 @@ input[type=submit] {
       border: 1px solid #FFA205;
       box-sizing: border-box;
       border-radius: 5px;
+      cursor: pointer;
 }
 
 input[type=checkbox] {
   margin-top: 16px;
 }
 
-input[type=submit] {
+.botao {
   background-color: #FFA205;
   color: white;
 }
 
-input[type=submit]:hover {
+.botao:hover {
     animation-name: fadeout;
     animation-duration: 500ms;
     animation-fill-mode: forwards;
@@ -226,6 +230,25 @@ input[type=submit]:hover {
   text-align:center;
   display:table;
   font-size: 2vw;
+}
+
+.imagem-overlay:hover {
+    opacity: 1;
+}
+
+.imagem-overlay {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    vertical-align: middle;
+    align-items: center;
 }
 
 @media screen and (max-width: 900px) {
