--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,8 @@ a {
     color: white;
     font-size: 5vw;
 
-    padding: 15rem 20rem;
+    padding: 15vh 20rem;
+    height: 70vh;
 }
 
 input[type=text]{
@@ -110,7 +111,7 @@ input[type=text]{
 }
 
 .button:hover {
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.2);
 
     transition: background-color 250ms ease-out;
 }
