--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ a {
     right: 0;
 
     padding: 1.5rem 2rem;
+    height: 5vh;
     margin: 0;
 }
 
@@ -42,7 +43,7 @@ a {
 }
 
 .headerAnchors a:hover {
-    background-color: #EEEEEE;
+    background-color: #eee;
 
     transition: background-color 250ms ease-out;
 }
@@ -62,7 +63,7 @@ a {
 }
 
 .headerLogo:hover {
-    background-color: #EEEEEE;
+    background-color: #eee;
     color: black;
 
     transition: background-color 250ms ease-out,
@@ -115,3 +116,39 @@ input[type=text]{
 
     transition: background-color 250ms ease-out;
 }
+
+.sobre {
+    display: flex;
+    justify-content: space-around;
+
+    background-color: white;
+
+    font-size: 3vw;
+    padding: 35vh 10rem;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+}
+
+.info h1 {
+    font-size: 1.5vw;
+    color: black;
+}
+
+.info p {
+    font-size: 1.25vw;
+    color: #555555;
+}
+
+.material-icons-outlined {
+    align-self: center;
+    color: dodgerblue;
+    cursor: default;
+}
+
+.material-icons-outlined.md-18 {font-size: 18px;}
+.material-icons-outlined.md-24 {font-size: 24px;}
+.material-icons-outlined.md-36 {font-size: 36px;}
+.material-icons-outlined.md-48 {font-size: 48px;}
