--- a/styles.css
+++ b/styles.css
@@ -94,10 +94,14 @@ a {
     flex-direction: column;
 
     color: white;
+    background-image:
+        linear-gradient(rgba(255, 255, 255, 0.3), rgba(0, 0, 255, 0.7)),
+        url('https://www.albany.edu/sites/default/files/keynote-speaker.jpg');
     font-size: 5vw;
 
     padding: 15vh 20rem;
     height: 70vh;
+
 }
 
 input[type=text]{
