--- a/styles.css
+++ b/styles.css
@@ -166,7 +166,6 @@ input[type=text]{
     background-color: white;
     color: white;
 
-    font-size: 1vw;
     padding: 20vh 10rem;
 }
 
@@ -179,11 +178,14 @@ input[type=text]{
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-around;
     gap: 10rem;
+
+    width: 100%;
 }
 
 .mockupInfo {
-    font-size: 2vw;
+    font-size: 1.75vw;
     color: black;
 }
 
@@ -196,7 +198,7 @@ input[type=text]{
     flex-direction: column;
     gap: 3rem;
 
-    background: linear-gradient(#eee, #ccc);
+    background: linear-gradient(#fff, #ccc);
     font-size: 1.25vw;
 
     padding: 4rem 7rem;
@@ -225,3 +227,42 @@ input[type=text]{
     color: #555;
     align-self: center;
 }
+
+#publicoAlvo {
+    padding: 10%;
+    background-color: white;
+    text-align: center;
+    font-size: 1.75vw;
+}
+
+.grid-imagens-publico {
+    display: flex;
+    justify-content: center;
+    gap: 5%;
+    text-align: left;
+    padding-top: 3rem;
+}
+
+.imagem-publico {
+    width: 30%;
+    height: 100%;
+    background-color: #eee;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    position: relative;
+}
+
+.imagem-publico img {
+    background-color: white;
+    background-size: 100%;
+    width: 100%;
+    height: 90%;
+    object-fit: fill;
+}
+
+.imagem-publico p {
+    padding-left: 3%;
+    font-size: 1vw;
+}
+
