--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 html, body {
     height: 100%;
     margin: 0%;
-    font-family: monospace;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 16px;
 
     scroll-behavior: smooth;
 }
@@ -9,6 +10,10 @@ html, body {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+h1 {
+    text-transform: uppercase;
 }
 
 .material-icons-outlined {
@@ -86,7 +91,7 @@ a {
     flex-direction: column;
 
     background-color: grey;
-    font-size: 5vw;
+    font-size: 5rem;
 }
 
 #landing {
@@ -134,26 +139,43 @@ input[type=text]{
 
 #sobre {
     display: flex;
-    justify-content: space-around;
+    flex-basis: content;
 
     background-color: white;
+    padding: 5rem 4rem;
+    justify-content: center;
 
-    font-size: 3vw;
-    padding: 35vh 10rem;
+    gap: 1.5rem;
 }
 
 .info {
+    flex-basis: 25%;
+
     display: flex;
     flex-direction: column;
+    text-align: center;
+    background: white;
+    justify-items: center;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+    padding: 2rem;
+}
+
+.info p {
+    text-align: justify;
+}
+
+.info:hover {
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
 }
 
 .info h1 {
-    font-size: 1.5vw;
+    font-size: 1.5rem;
     color: black;
 }
 
 .info p {
-    font-size: 1.25vw;
+    font-size: 1.25rem;
     color: #555;
 }
 
@@ -185,7 +207,7 @@ input[type=text]{
 }
 
 .mockupInfo {
-    font-size: 1.75vw;
+    font-size: 1.75rem;
     color: black;
 }
 
@@ -199,7 +221,7 @@ input[type=text]{
     gap: 3rem;
 
     background: linear-gradient(#fff, #ccc);
-    font-size: 1.25vw;
+    font-size: 1.25rem;
 
     padding: 4rem 7rem;
 }
@@ -229,10 +251,10 @@ input[type=text]{
 }
 
 #publicoAlvo {
-    padding: 10%;
+    padding: 4rem 5rem;
     background-color: white;
     text-align: center;
-    font-size: 1.75vw;
+    font-size: 1.75rem;
 }
 
 .gridImagensPublico {
@@ -263,7 +285,7 @@ input[type=text]{
 
 .imagemPublico p {
     padding-left: 3%;
-    font-size: 1vw;
+    font-size: 1rem;
 }
 
 @media screen and (max-width: 1200px) {
@@ -272,7 +294,7 @@ input[type=text]{
     }
 
     .landing {
-        text-justify: center;
+        text-align: center;
     }
 
     .landingForm {
@@ -293,15 +315,17 @@ input[type=text]{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 5rem;
+    }
+
+    .info {
+        width: 100%;
+        flex-basis: 100%;
+        flex-grow: 1;
+
     }
 
     .info h1 {
-        font-size: 3vw;
-    }
-
-    .info p {
-        display: none;
+        font-size: 3rem;
     }
 
     .gridImagensPublico {
@@ -316,7 +340,7 @@ input[type=text]{
     }
 
     .imagemPublico p {
-        font-size: 1.25vw;
+        font-size: 1.25rem;
     }
 
     .mainFooter {
@@ -325,14 +349,14 @@ input[type=text]{
     }
 
     .section {
-        font-size: 2vw;
-        text-justify: center;
+        font-size: 2rem;
+        text-align: center;
         justify-content: center;
         align-items: center;
     }
 
     .copyright {
-        font-size: 2.5vw;
+        font-size: 2.5rem;
     }
 }
 
