--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,8 @@ input[type=text]{
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.05);
     border-radius: 5px;
     padding: 2rem;
+
+    transition: box-shadow 0.5s ease;
 }
 
 .info p {
@@ -180,6 +182,9 @@ input[type=text]{
 
 .info:hover {
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
+
+    transition: box-shadow 0.5s ease;
+    /*color 250ms ease-out;*/
 }
 
 .info h1 {
